--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
         <script src="p5.min.js"></script>
         <style>
             body {
-                background-color: #008000;
+                background-color: #000000;
                 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-                margin-left: 100;             
+                margin-left: 100; 
+                text-align: center;            
             }
             .container {
             margin-left: 20px; /* Space on the left side */
@@ -44,7 +45,7 @@
         <br>
         <a href="notfound.html" target="_blank" style="color: rgb(120, 235, 13);">final assignment</a>
         <br> <br>
-        <a href="notfound.html" target="_blank" style="color: rgb(120, 235, 13);">lab 1</a>
+        <a href="lab1.html" target="_blank" style="color: rgb(120, 235, 13);">lab 1</a>
         <br>
         <a href="notfound.html" target="_blank" style="color: rgb(120, 235, 13);">lab 2</a>
         <br>
