--- a/lab2.html
+++ b/lab2.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <title>
-            week 4 - actually objects
+            LAB 2
         </title>
         <script src="p5.min.js"></script>
         <style>
