fixed the citing code stuff
was a 404 before

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <h2>links to assignments and labs!</h2>
 
-        <a href="ccindex.html" target="_blank" style="color: rgb(120, 235, 13);">citing code</a>
+        <a href="CITING CODE/ccindex.html" target="_blank" style="color: rgb(120, 235, 13);">citing code</a>
         <br>
         <a href="notfound.html" target="_blank" style="color: rgb(120, 235, 13);">assignment 3</a>
         <br>
