fixed lorem cause it looked bad

--- a/CITING CODE/ccindex.html
+++ b/CITING CODE/ccindex.html
@@ -64,16 +64,14 @@ All images are source from pintrest.
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
         Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Consectetur adipiscing elit, sed do eiusmod 
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
-        aliquip ex ea commodo consequat. 
-        <BR><BR>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Sed do eiusmod tempor incididunt ut labore 
+        et dolore magna aliqua. Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-        Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Consectetur adipiscing elit, sed do eiusmod 
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
-        aliquip ex ea commodo consequat.</p>
+        <BR><BR>
+        Fames enim fringilla tellus parturient iaculis. Maecenas laoreet nam pulvinar ex; diam litora hendrerit. 
+        Senectus nostra accumsan malesuada pharetra quis montes tristique mi. Orci pulvinar varius hendrerit pretium praesent 
+        purus convallis curae congue. Luctus nascetur himenaeos pellentesque cubilia; suscipit vulputate euismod turpis. 
+        Dictum conubia aenean diam nulla nisl mauris ridiculus blandit hendrerit. Sociosqu imperdiet hendrerit suscipit torquent luctus.</p>
     </div>
 
 <!-- Artwork, i changed it to artwork instead of members-->
