--- a/CITING CODE/ccindex.html
+++ b/CITING CODE/ccindex.html
@@ -113,7 +113,9 @@ All images are source from pintrest.
     <br><br>
     <img src="blueprints2 copy.png" class="w3-image" style="width:100%">
     <br><br>
-    <p class="w3-center w3-padding">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank">w3.css</a></p>
+    <p class="w3-center w3-padding">powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank">w3.css</a> &
+        <a href="https://p5js.org/" title="P5.JS" target="_blank">p5.js</a>
+    </p>
     </div>
     
     <!-- End Content -->
