--- a/CITING CODE/ccindex.html
+++ b/CITING CODE/ccindex.html
@@ -4,8 +4,8 @@ more like a website format https://www.w3schools.com/w3css/w3css_web_tmp_band.as
 
 This is W3SCHOOL tutorial
 
-I am changing the content of the images and used old pintrest images i had existing in my laptop already. 
-All images are source from pintrest.
+I am changing the content of the images and used old images i had existing in my laptop already. 
+All images are source from pintrest, behance and adobe stock!
 -->
 
 <!DOCTYPE html>
@@ -22,13 +22,15 @@ All images are source from pintrest.
     <script src="ccsketch.js"></script>
     <script src="block.js"></script>
    
-    <style>
+<!-- this code was me-->
+    <style> 
         body {
                 background-color: #ffffff;
                 font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif     
             }
     </style>
-    <br> <br>
+
+
 </head>
 
 
@@ -43,6 +45,19 @@ All images are source from pintrest.
     
     <!-- End Content -->
     </div>
+
+<!-- 
+this isn't in the original code but i wanted to add some audio!!!!! since this is the part of the assignemnt where i get to add 
+my own code, i decided to make two like background music things i feel kinda fit with the vibe i have of my website so far. 
+
+music produced by me, emma ferreira
+program used: bandlab 
+
+although it's seperate from the tutorials im following, i did use w3 for help with the audio code https://www.w3schools.com/tags/att_audio_loop.asp 
+-->
+    <audio loop autoplay>
+        <source src="bgms 1 copy.mp3" type="audio/mpeg">
+      </audio>
 
 <!-- Navigation (Stays on Top) -->
 <div class="w3-top w3-bar w3-black"> 
@@ -64,7 +79,7 @@ All images are source from pintrest.
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
         Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Sed do eiusmod tempor incididunt ut labore 
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea. Sed do eiusmod tempor incididunt ut labore 
         et dolore magna aliqua. Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
         <BR><BR>
@@ -74,7 +89,21 @@ All images are source from pintrest.
         Dictum conubia aenean diam nulla nisl mauris ridiculus blandit hendrerit. Sociosqu imperdiet hendrerit suscipit torquent luctus.</p>
     </div>
 
-<!-- Artwork, i changed it to artwork instead of members-->
+<!-- Slides, artwork from sick again: https://www.behance.net/gallery/151997777/CYBERGORE-GIF -->
+<img class="slides" src="cybercore1.jpg" width="100%">
+<img class="slides" src="cybercore2.jpg" width="100%">
+<img class="slides" src="cybercore3.jpg" width="100%">
+<!--added 5 more to fit the artwork i found, also increased the speed of the slides-->
+<img class="slides" src="cybercore4.jpg" width="100%">
+<img class="slides" src="cybercore5.jpg" width="100%">
+<img class="slides" src="cybercore6.jpg" width="100%">
+<img class="slides" src="cybercore7.jpg" width="100%">
+<img class="slides" src="cybercore8.jpg" width="100%">
+<script>
+w3.slideshow(".slides", 400);
+</script>
+
+<!-- Artwork (i changed it to artwork instead of members like it was on the original tutorial)-->
 <div id="artwork" class="w3-container w3-center w3-padding-32">
     <h2 class="w3-wide">ARTWORK</h2>
     <div class="w3-row w3-center">
@@ -111,6 +140,7 @@ All images are source from pintrest.
     <button class="w3-button w3-black" type="submit">SEND</button>
     </form>
     <br><br>
+<!-- this blueprint image i used for a previous assignment and was taken from adobe stock-->
     <img src="blueprints2 copy.png" class="w3-image" style="width:100%">
     <br><br>
     <p class="w3-center w3-padding">powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank">w3.css</a> &
