--- a/TEXT ADVENTURE/taindex.html
+++ b/TEXT ADVENTURE/taindex.html
@@ -5,16 +5,27 @@
     <title>TEXT ADVENTURE</title>
     <style>
         body {
-                background-color: #000000;
-                font-family:Verdana, Geneva, Tahoma, sans-serif;
-                color: #FFFFFF;
-                margin-left: 100; 
-                text-align: center;  
+            background-image: url('table view.jpg');
+            background-size: 900, 900; 
+            background-position: center; 
+            background-repeat: no-repeat; 
+            background-color: #000000;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            color: #FFFFFF;
+            margin: 0;
+            display: flex; 
+            justify-content: center; 
+            align-items: center; 
+            height: 100vh; 
         }
+
      </style>
 </head>
 <body>
+    <div id="canvas-container">
     <script src="p5.min.js"></script>
     <script src="tasketch.js"></script>
+
+    </div>
 </body>
 </html>
