added text adventure to the main thing

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <a href="CITING CODE/ccindex.html" target="_blank" style="color: rgb(120, 235, 13);">citing code</a>
         <br>
-        <a href="notfound.html" target="_blank" style="color: rgb(120, 235, 13);">assignment 3</a>
+        <a href="TEXT ADVENTURE/taindex.html" target="_blank" style="color: rgb(120, 235, 13);">text adventure</a>
         <br>
         <a href="notfound.html" target="_blank" style="color: rgb(120, 235, 13);">assignment 4</a>
         <br>
