--- a/CITING CODE/ccindex.html
+++ b/CITING CODE/ccindex.html
@@ -58,6 +58,11 @@ although it's seperate from the tutorials im following, i did use w3 for help wi
     <audio loop autoplay>
         <source src="bgms 1 copy.mp3" type="audio/mpeg">
       </audio>
+      <script>
+        // I WAS TOLD ITS TOO LOUD SO I LOWERED THE VOLUME
+        const audio = document.getElementById('background-audio');
+        audio.volume = 0.5;
+    </script>
 
 <!-- Navigation (Stays on Top) -->
 <div class="w3-top w3-bar w3-black"> 
