--- a/TEXT ADVENTURE/taindex.html
+++ b/TEXT ADVENTURE/taindex.html
@@ -75,6 +75,12 @@
     <audio loop autoplay>
         <source src="Alphabet Soup - First Day, Last Night.mp3" type="audio/mpeg">
       </audio>
+
+      <script>
+        // I WAS TOLD ITS TOO LOUD SO I LOWERED THE VOLUME
+        const audio = document.getElementById('background-audio');
+        audio.volume = 0.5;
+    </script>
       <!--
       
       I WAS TRYING TO FIND SONGS TO ADD FOR MY SOUP TIME AND I FOUND THIS
