--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
         <br>
         <a href="TEXT ADVENTURE/taindex.html" target="_blank" style="color: rgb(120, 235, 13);">text adventure</a>
         <br>
-        <a href="notfound.html" target="_blank" style="color: rgb(120, 235, 13);">assignment 4</a>
-        <br>
-        <a href="notfound.html" target="_blank" style="color: rgb(120, 235, 13);">assignment 5</a>
+        <a href="P5 + ARRAY/paindex.html" target="_blank" style="color: rgb(120, 235, 13);">p5 + array</a>
         <br>
         <a href="notfound.html" target="_blank" style="color: rgb(120, 235, 13);">final assignment</a>
         <br> <br>
