--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <br>
         <a href="lab3.html" target="_blank" style="color: rgb(120, 235, 13);">lab 3</a>
         <br>
-        <a href="notfound.html" target="_blank" style="color: rgb(120, 235, 13);">lab 4</a>
+        <a href="LAB4/lab4.html" target="_blank" style="color: rgb(120, 235, 13);">lab 4</a>
         <br>
         <a href="notfound.html" target="_blank" style="color: rgb(120, 235, 13);">lab 5</a>
 
