--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <br>
         <a href="LAB4/lab4.html" target="_blank" style="color: rgb(120, 235, 13);">lab 4</a>
         <br>
-        <a href="notfound.html" target="_blank" style="color: rgb(120, 235, 13);">lab 5</a>
+        <a href="LAB5/lab5.html" target="_blank" style="color: rgb(120, 235, 13);">lab 5</a>
 
 
  
