--- a/FINAL ASSIGNMENT/car.html
+++ b/FINAL ASSIGNMENT/car.html
@@ -16,6 +16,9 @@
         
     </head>
     <body>
+        <audio id="carsound" autoplay loop>
+            <source src="carsound.mp3" type="audio/mpeg">
+        </audio>
         <script src="car.js"></script>
     </body>
 </html>
