--- a/FINAL ASSIGNMENT/room.html
+++ b/FINAL ASSIGNMENT/room.html
@@ -14,6 +14,9 @@
 
     </head>
     <body>
+        <audio id="roomsound" autoplay loop>
+            <source src="roomnoise.mp3" type="audio/mpeg">
+        </audio>
         <script src="room.js"></script>
     </body>
 </html>
