--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <br>
         <a href="P5 + ARRAY/paindex.html" target="_blank" style="color: rgb(120, 235, 13);">p5 + array</a>
         <br>
-        <a href="notfound.html" target="_blank" style="color: rgb(120, 235, 13);">final assignment</a>
+        <a href="FINAL ASSIGNMENT/faindex.html" target="_blank" style="color: rgb(120, 235, 13);">final assignment</a>
         <br> <br>
         <a href="lab1.html" target="_blank" style="color: rgb(120, 235, 13);">lab 1</a>
         <br>
